fix: change overflow-x-hidden to overflow-x-clip to fix sticky header issue

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 @layer base {
   html, body {
-    @apply overflow-x-hidden;
+    @apply overflow-x-clip;
   }
   body {
     @apply bg-brand-light text-brand-dark font-sans antialiased;
